--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
   <body>
     <div class="container">
       <div class="row">
+        <select id="selection"></select>
+      </div>
+      <div class="row">
         <div class="seven" id="recipe_names">
 
         </div>
