--- a/client/index.html
+++ b/client/index.html
@@ -2,23 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Recipes!</title>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>Recipes</h1>
     <div class="container">
-      <div class="row">
+      <div class="select">
+        <span>Filter</span>
         <select id="selection"></select>
       </div>
-      <div class="row">
-        <div class="seven" id="recipe_names">
-
+      <div class="recipes">
+        <span>Recipes</span>
+        <div id="recipe_names">
         </div>
-        <div class="five columns" id="recipe_details">
-
+      </div>
+      <div class="ingredients">
+        <span>Ingredients</span>
+        <div id="recipe_details">
         </div>
       </div>
     </div>
